# anonify

./: .gitignore  Dockerfile  README.md  TODO.md  main.py  pyproject.toml
backend/: .env.template
backend/app/api/: middleware.py  server.py
backend/app/api/v1/routes/: __init__.py  pii_remover.py  ping.py  sanitizer.py
backend/app/core/: config.py  errors.py  logging_config.json  logging_config.py
backend/app/models/: pii.py  sanitizer.py
backend/app/services/: __init__.py  base.py  html_service.py  model_service.py  orchestrator.py  pii_removal.py  regex_service.py  utils.py  validation_service.py
backend/tests/: conftest.py  test_html_service.py  test_orchestrator.py  test_pii_model_service.py  test_pii_regex_service.py  test_pii_remover.py  test_pii_remover_routes.py  test_pii_remover_service.py  test_ping.py  test_sanitizer.py  test_validation_service.py
